--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.1",
     "lucide-react": "^0.477.0",
     "next": "15.2.0",
     "postcss": "^8.5.3",
